<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mantenedor Productos"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/btConsultar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:hint="@string/btConsultar"
        android:onClick="nextBuscar"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <Button
        android:id="@+id/btInsertar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:hint="@string/btInsertar"
        android:onClick="nextInsertar"
        android:textColorHint="#FDFDFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <Button
        android:id="@+id/btModificar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:hint="@string/btModificar"
        android:onClick="nextModificar"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btConsultar" />

    <Button
        android:id="@+id/btEliminar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:hint="@string/btEliminar"
        android:onClick="nextEliminar"
        android:textColorHint="#FBFBFB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btInsertar" />
</androidx.constraintlayout.widget.ConstraintLayout>